--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/LaomaNogueira/api-store-nodejs-sqlite#readme",
   "dependencies": {
     "cpf-cnpj-validator": "^1.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-routes": "^1.0.1",
     "express-validator": "^6.13.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "sequelize": "^6.12.0-alpha.1",
     "sqlite3": "^5.0.2"
